<resources>
    <string name="app_name">La Huella De Andrea</string>
    <string name="registro">Registro</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="la_huella_de_andrea">La Huella de Andrea</string>
    <string name="registro2">Registrar</string>
    <string name="Nombre">Name</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="bodyloveimg">TODO</string>
    <string name="correo">Correo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login2">Login</string>
    <string name="homeimg1">homeimg1</string>
    <string name="homeimg2">homeimg2</string>
    <string name="q_a"><![CDATA[Q&A]]></string>
    <string name="blog">Blog</string>
    <string name="homeimg3">homeimg3</string>
    <string name="no_est_s_sola">No estás sola</string>
    <string name="homeimg4">homeimg4</string>
    <string name="motivaci_n">Motivación</string>
    <string name="homeimg5">homeimg5</string>
    <string name="ayuda">Ayuda</string>
    <string name="homeimglogo">homeimglogo</string>
    <string name="nosotras">Nosotras</string>
    <string name="loginimg">loginimg</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="ayudapageimg">ayudapageimg</string>
    <string name="_55_5951_6219">55 5951 6219</string>
    <string name="_55_1948_0607">55 1948 0607 </string>
    <string name="_55_3224_1022">55 3224 1022</string>
    <string name="_55_6611_7949">55 6611 7949</string>
    <string name="_55_8100_6966">55 8100 6966</string>
    <string name="qaimg">qaimg</string>
    <string name="pregunta">Pregunta</string>
    <string name="first_fragment_label"></string>
    <string name="second_fragment_label"></string>
    <string name="nosotrasimg">nosotrasimg</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="adjuntar_imagen">Adjuntar Imagen</string>
    <string name="motivaci_n_imagen">Motivación Imagen</string>
    <string name="blogimgs">blogimgs</string>
    <string name="blog_imagen">Blog Imagen</string>
</resources>