<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/homeimg1"
        android:layout_width="204dp"
        android:layout_height="205dp"
        android:contentDescription="@string/homeimg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bodylove"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/homeimg2"
        android:layout_width="208dp"
        android:layout_height="205dp"
        android:contentDescription="@string/homeimg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bodylove2"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/qa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="132dp"
        android:onClick="redirectoToQA"
        android:text="@string/q_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="52dp"
        android:text="@string/blog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/homeimg3"
        android:layout_width="410dp"
        android:layout_height="125dp"
        android:layout_marginTop="204dp"
        android:contentDescription="@string/homeimg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manos"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/bites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="@string/no_est_s_sola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/homeimg4"
        android:layout_width="209dp"
        android:layout_height="203dp"
        android:layout_marginBottom="52dp"
        android:contentDescription="@string/homeimg4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeimg3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/motivacion"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/homeimg5"
        android:layout_width="206dp"
        android:layout_height="203dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/homeimg5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeimg3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ayuda"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/motivacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="164dp"
        android:onClick="redirectToMotivacion"
        android:text="@string/motivaci_n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="164dp"
        android:onClick="redirectToAyuda"
        android:text="@string/ayuda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/nosotras"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:onClick="redirectToNosotros"
        android:text="@string/nosotras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toEndOf="@+id/homeimglogo"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/homeimglogo"
        android:layout_width="57dp"
        android:layout_height="53dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/homeimglogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="197dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="322dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="199dp" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteY="524dp" />
</androidx.constraintlayout.widget.ConstraintLayout>