<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contra"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/registro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F17375"
        android:text="@string/registro2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordInput"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/registerFirstNameInput"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apellido"
        app:layout_constraintStart_toStartOf="@+id/registerFirstNameInput"
        app:layout_constraintTop_toBottomOf="@+id/registerFirstNameInput" />

    <TextView
        android:id="@+id/nombre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="@+id/registerFirstNameInput"
        app:layout_constraintTop_toBottomOf="@+id/bodyloveimg" />

    <EditText
        android:id="@+id/registerEmailnput"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correotext"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/correotext"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="10dp"
        android:text="@string/correo"
        app:layout_constraintStart_toStartOf="@+id/registerLastNameInput"
        app:layout_constraintTop_toBottomOf="@+id/registerLastNameInput" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/contrase_a"
        app:layout_constraintStart_toStartOf="@+id/registerEmailnput"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailnput" />

    <EditText
        android:id="@+id/registerLastNameInput"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/bodyloveimg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/bodyloveimg"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bodyloveimg" />

</androidx.constraintlayout.widget.ConstraintLayout>